# merge_warden

./: .dockerignore  .gitguardian.yml  .gitignore  .release-please-manifest.json  AGENTS.md  CHANGELOG.md  Cargo.toml  GitVersion.yml  README.md  cargo.toml  catalog.config.yml  cliff.toml  cross.toml  deny.toml  knope.toml  mkdocs.yml  release-please-config.json  release-plz.toml  release-regent.toml  renovate.json  test_config.rs  test_pattern.rs  test_powershell.rs
.cargo/: audit.toml
.github/: copilot-instructions.md  merge-warden.toml
.github/instructions/: 001-general.instructions.md  002-tooling.instructions.md  050-scm.instructions.md  100-workflow-guidelines.instructions.md  150-coding.instructions.md  151-coding-markdown.instructions.md  152-coding-rust.instructions.md  153-coding-terraform.instructions.md
.github/scripts/: prepare-release.js  prepare-release.sh  update_github_label_colors.ps1
.github/workflows/: ci.yml  claude-pr-review.yml  cleanup-test-repositories.yml  deploy.yml  docs-site.yml  docs.yml  e2e-tests.yml  find_mutants_in_pr.yml  integration-tests.yml  lint.yml  lint_pr.yml  pr.yml  prepare-release.yml  publish-release.yml  release-please.yml  release-plz.yml  release.yml  test-prepare-release-script.yml  tf-drift.yml
.roo/: system-prompt-architect  system-prompt-ask  system-prompt-code  system-prompt-debug  system-prompt-test
.roo/rules-architect/: architect.md
.roo/rules-ask/: ask.md
.roo/rules-code/: code.md
.roo/rules-debug/: debug.md
.roo/rules-test/: test.md
configs/az_func/: azure-functions-host.json  host.json
crates/azure-functions/: CHANGELOG.md  Cargo.toml
crates/azure-functions/src/: app_config_client.rs  app_config_client_tests.rs  errors.rs  errors_tests.rs  main.rs  main_tests.rs  telemetry.rs  telemetry_tests.rs
crates/cli/: CHANGELOG.md  Cargo.toml  README.md
crates/cli/src/: commands.rs  config.rs  config_tests.rs  errors.rs  errors_tests.rs  main.rs
crates/cli/src/commands/: auth.rs  auth_tests.rs  check_pr.rs  config_cmd.rs
crates/cli/src/commands/config/: bypass.rs  bypass_tests.rs  mod.rs
crates/core/: CHANGELOG.md  Cargo.toml
crates/core/src/: bypass.rs  bypass_tests.rs  check_tests.rs  checks.rs  config.rs  config_tests.rs  errors.rs  labels.rs  labels_tests.rs  lib.rs  lib_tests.rs  models.rs  size.rs  size_integration_tests.rs  size_tests.rs  validation_result.rs  validation_result_tests.rs
crates/core/src/checks/: title.rs  title_tests.rs  work_item.rs  work_item_tests.rs
crates/developer_platforms/: CHANGELOG.md  Cargo.toml
crates/developer_platforms/src/: app_auth.rs  app_auth_tests.rs  auth.rs  errors.rs  errors_tests.rs  github.rs  github_tests.rs  lib.rs  lib_tests.rs  models.rs  models_tests.rs
crates/developer_platforms/testdata/: test-rsa-key.pem
crates/integration-tests/: Cargo.toml
crates/integration-tests/src/: ci_config.rs  ci_config_tests.rs  environment.rs  environment_tests.rs  errors.rs  lib.rs
crates/integration-tests/src/github/: mod.rs  repository_manager.rs
crates/integration-tests/src/mocks/: mod.rs
crates/integration-tests/src/mocks/azure/: app_config.rs  key_vault.rs  mod.rs
crates/integration-tests/src/utils/: mod.rs  test_data.rs
crates/integration-tests/tests/: concurrent_processing.rs  configuration_change_detection.rs  core_workflow_tests.rs  crate_structure_tests.rs  error_handling_and_recovery.rs  org_policy_config_resolution.rs  pull_request_validation_workflow.rs
crates/server/: Cargo.toml  Dockerfile
crates/server/src/: config.rs  config_tests.rs  errors.rs  ingress.rs  ingress_tests.rs  main.rs  telemetry.rs  telemetry_tests.rs  webhook.rs  webhook_tests.rs
docs/: architecture.md  catalog.md  config-discrepancies.md  constraints.md
docs/adr/: ADR-002-policy-engine.md  ADR-003-org-level-policy.md  ADR-004-conditional-org-policies.md
docs/catalog/: cli.md  core.md  developer-platforms.md  general.md  index.md  server.md
docs/deployment/: README.md  terraform-modules.md
docs/deployment/aws/: README.md
docs/deployment/azure/: README.md
docs/spec/: README.md  test-coverage.md
docs/spec/architecture/: README.md  core-components.md  deployment-architectures.md  event-processing.md  org-policy-config.md  system-overview.md
docs/spec/design/: README.md  bypass-mechanisms.md  configuration-system.md  containerisation.md  github-bot-sdk-migration.md  issue-metadata-propagation.md  labeling-system.md  queue-architecture.md  validation-engine.md
docs/spec/interfaces/: README.md  conditional-policies.md  core-config-validation.md  developer-platforms-sdk.md  org-policy.md  policy-engine.md  server-config.md  server-ingress.md
docs/spec/operations/: README.md  deployment.md  monitoring.md  release-management.md
docs/spec/requirements/: functional-requirements.md
docs/spec/security/: README.md  threat-model.md
docs/user/: index.md
docs/user/how-to/: run-locally.md  (+17 more)
fuzz/: Cargo.toml
fuzz/fuzz_targets/: diagnose_pr_title.rs  extract_issue_reference.rs  validate_config_content.rs
ops/azure/: main.tf  setup-terraform-backend.ps1  variables.tf
samples/: README.md  app-config.sample.toml  host.json  merge-warden-org-policy.sample.toml  merge-warden.sample.toml  run-local.ps1  setup-test-repository.ps1
samples/ci-cd/: README.md  function-deploy.yml  terraform-apply.yml  terraform-plan.yml
samples/scripts/: README.md  deploy.sh
scripts/: README.md  update_catalog.py
specs/: azure_functions.md  bypass-logging-and-indication.md  cli.md  config_schema.md  core_crate.md  developer_platforms_crate.md  phase5-azure-functions-app-config-integration.md  pr-size-labeling.md  rfc-custom-release-workflow.md  rfc-release-please-migration.md  service_overview.md
specs/architecture/: README.md  platform-integrations.md  system-overview.md
specs/design/: bypass-mechanisms.md  configuration-system.md  labeling-system.md  validation-engine.md
specs/operations/: configuration-management.md  deployment.md  monitoring.md
specs/requirements/: README.md
specs/testing/: README.md  end-to-end-testing.md  integration-testing.md
(+21 files in other folders)
