[workspace]
resolver = "2"
members = [
    "crates/core",
    #"crates/github",
    #"crates/aws-lambda",
    #"crates/azure-functions",
    #"crates/cli"
]

[workspace.package]
authors = ["Patrick van der Velde"]
repository = "https://github.com/pvandervelde/merge_warden"
version = "0.1.0"
license-file = "LICENSE"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
octocrab = "0.19"
regex = "1.5"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"
clap = { version = "4.0", features = ["derive"] }
dotenv = "0.15"
jsonwebtoken = "8.1"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
