[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/developer_platforms",
    #"crates/aws-lambda",
    "crates/azure-functions",
    "crates/cli",
]

[workspace.package]
authors = ["Patrick van der Velde"]
repository = "https://github.com/pvandervelde/merge_warden"
version = "0.1.1"
license-file = "LICENSE"

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
axum = "0.8.3"
clap = { version = "4.5", features = ["derive"] }
hex = "0.4"
hmac = "0.12"
jsonwebtoken = "9.3"
octocrab = "0.44"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-opentelemetry = "0.30.0"
opentelemetry_sdk = { version = "0.29.0", features = ["rt-tokio"] }
opentelemetry = "0.29.1"
opentelemetry-otlp = { version = "0.29.0", features = [
    "http-proto",
    "reqwest-client",
] }
reqwest = "0.12.15"
toml = "0.8"
