[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/developer_platforms",
    #"crates/aws-lambda",
    "crates/server",
    "crates/cli",
    "crates/integration-tests",
]

[workspace.package]
authors = ["Patrick van der Velde"]
repository = "https://github.com/pvandervelde/merge_warden"
version = "0.3.1"
license-file = "LICENSE"

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
axum = "0.8.3"
github-bot-sdk = "0.2.0"
axum-macros = "0.5.0"
clap = { version = "4.5", features = ["derive"] }
hex = "0.4"
hmac = "0.12"
jsonwebtoken = "9.3"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "2.0"
tokio = { version = "1.49", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3.20"
tracing-opentelemetry = "0.30.0"
opentelemetry_sdk = { version = "0.29.0", features = ["rt-tokio"] }
opentelemetry = "0.29.1"
opentelemetry-otlp = { version = "0.29.0", features = [
    "http-proto",
    "reqwest-client",
] }
queue-runtime = { git = "https://github.com/pvandervelde/queue-runtime", rev = "ac848ff" }
reqwest = "0.12.28"
toml = "0.9"
urlencoding = "2.1"
