[package]
authors.workspace = true
description = "A github bot that validates pull requests against configured rules"
edition = "2021"
license-file.workspace = true
name = "az_handler"
repository.workspace = true
version.workspace = true

[dependencies]
merge_warden_core = { path = "../core" }
merge_warden_developer_platforms = { path = "../developer_platforms" }
axum = { workspace = true }
azure_identity = "0.23.0"
azure_security_keyvault_secrets = "0.2.0"
hex.workspace = true
hmac.workspace = true
octocrab = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-application-insights = { version = "0.40.0", features = ["reqwest", "tracing"] }
opentelemetry-otlp = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2.workspace = true
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true, features = ["log"] }
tracing-opentelemetry = { workspace = true, features = ["thiserror"] }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
tracing-log = "0.2"
log = "0.4.27"
opentelemetry-appender-log = "0.29.0"
azure_core = "0.23"

# See https://github.com/sfackler/rust-openssl/issues/1627
# and https://docs.rs/openssl/latest/openssl/#vendored
[target.x86_64-unknown-linux-musl.dependencies]
openssl = { version = "0.10.72", features = ["vendored"] }
