[package]
authors.workspace = true
description = "Command-line interface for validating pull requests against configured rules"
edition = "2021"
license-file.workspace = true
name = "merge_warden_cli"
repository.workspace = true
version.workspace = true

[[bin]]
name = "merge-warden"
path = "src/main.rs"

[dependencies]
merge_warden_core = { path = "../core" }
merge_warden_developer_platforms = { path = "../developer_platforms" }
anyhow = { workspace = true }
axum = { workspace = true }
clap = { workspace = true }
dirs = "5.0"
hex.workspace = true
hmac.workspace = true
jsonwebtoken.workspace = true
keyring = { version = "3.6.2", features = [
    "apple-native",
    "linux-native",
    "windows-native",
] }
octocrab = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2.workspace = true
thiserror = { workspace = true }
tokio = { workspace = true }
toml = "0.8"
tracing = { workspace = true, features = ["log"] }
tracing-opentelemetry = { workspace = true, features = ["thiserror"] }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
