[package]
authors.workspace = true
description = "Command-line interface for validating pull requests against configured rules"
edition = "2021"
license-file.workspace = true
name = "merge_warden_cli"
repository.workspace = true
version.workspace = true

[[bin]]
name = "merge-warden"
path = "src/main.rs"

[dependencies]
merge_warden_core = { path = "../core" }
merge_warden_developer_platforms = { path = "../developer_platforms" }
anyhow = { workspace = true }
axum = { workspace = true }
axum-macros = { workspace = true }
clap = { workspace = true }
dirs = "6.0"
async-trait = { workspace = true }
chrono = { workspace = true }
github-bot-sdk = { workspace = true }
keyring = "4.0.0"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true, features = ["log"] }
tracing-opentelemetry = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }

[dev-dependencies]
tempfile = "=3.27.0"
