[package]
authors.workspace = true
description = "Core business logic for Merge Warden PR validation"
edition = "2021"
license-file.workspace = true
name = "merge-warden-core"
repository.workspace = true
version.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
regex = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
lazy_static = "1.4.0"

[dev-dependencies]
proptest = "1.6.0"
