[package]
authors.workspace = true
description = "Core business logic for Merge Warden PR validation"
edition = "2021"
license-file.workspace = true
name = "merge_warden_core"
repository.workspace = true
version.workspace = true

[dependencies]
merge_warden_developer_platforms = { path = "../developer_platforms" }
serde = { workspace = true }
serde_json = { workspace = true }
regex = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
lazy_static = "1.5.0"
indoc = "2.0.6"

[dev-dependencies]
proptest = "1.6.0"
