[package]
authors.workspace = true
description = "Core business logic for Merge Warden PR validation"
edition = "2021"
license-file.workspace = true
name = "merge_warden_core"
version = "0.1.0"

[dependencies]
merge_warden_developer_platforms = { path = "../developer_platforms" }
anyhow = { workspace = true }
async-trait = { workspace = true }
indoc = "2.0.6"
lazy_static = "1.5.0"
octocrab = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
proptest = "=1.6.0"
