[package]
authors.workspace = true
description = "APIs for interacting with developer platforms"
edition = "2021"
license-file.workspace = true
name = "merge_warden_developer_platforms"
repository.workspace = true
version.workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = "0.4.40"
jsonwebtoken = { workspace = true }
octocrab = "0.44"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
