[package]
authors.workspace = true
description = "APIs for interacting with developer platforms"
edition = "2021"
license-file.workspace = true
name = "merge_warden_developer_platforms"
repository.workspace = true
version = "0.1.0"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = "0.4.40"
jsonwebtoken = { workspace = true }
octocrab = { workspace = true }
reqwest = { version = "0.12.15", features = ["json"] }
secrecy = "0.10.3"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
