[package]
name = "merge-warden-integration-tests"
version.workspace = true
authors.workspace = true
repository.workspace = true
license-file.workspace = true
edition = "2021"

[dependencies]
# Workspace dependencies
merge_warden_core = { path = "../core" }
merge_warden_developer_platforms = { path = "../developer_platforms" }
github-bot-sdk = { workspace = true }

# Async runtime and testing
async-trait = { workspace = true }
futures = "0.3"
tokio = { workspace = true, features = ["full", "test-util"] }
tokio-test = "0.4"

# GitHub API and HTTP client
# Used only by the integration-test infrastructure (src/github/).
# This is a testing-only dependency; no production crate uses octocrab.
octocrab = "0.44"
reqwest = { workspace = true, features = ["json"] }
axum = { workspace = true }

# Serialization and configuration
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
toml = { workspace = true }

# Test utilities and mocking
mockall = "0.13"
serial_test = "3.2"
tempfile = "3.8"
uuid = { version = "1.10", features = ["v4"] }
wiremock = "0.6"

# Error handling and logging
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Cryptography and encoding
base64 = "0.22"
hex = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
# Rustls crypto provider selection — required when both reqwest v0.12 (ring) and
# reqwest v0.13 (aws-lc-rs) are in the dependency tree, because rustls v0.23
# cannot auto-select a provider when multiple backends are present.
rustls = { version = "0.23", features = ["aws-lc-rs"], default-features = false }

# Time and random utilities
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"

[dev-dependencies]
# Additional test dependencies can be added here if needed
pretty_assertions = "=1.4.1"
